--- a/app/globals.css
+++ b/app/globals.css
@@ -2,32 +2,78 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+.ai-image-generator {
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  align-items: center;
+  margin-top: 80px;
+  margin-bottom: 20px;
+  gap: 30px;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.header {
+  font-size: 70px;
+  font-weight: 500;
+  padding-bottom: 30px;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.header span {
+  color: #de1b89;
+  font-weight: 600;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.img-loading {
+  display: flex;
+  flex-direction: column;
+}
+
+.img-loading img {
+  width: 512px;
+}
+
+.search-box {
+  border-radius: 50px;
+  background: #1f3540;
+}
+
+.search-input {
+  background: transparent;
+  border: none;
+  outline: none;
+}
+
+.search-input::placeholder {
+  color: #999;
+  word-wrap: break-word;
+}
+
+.generate-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50px;
+  background: #de1b89;
+  cursor: pointer;
+}
+
+.loading-bar {
+  width: 0px;
+  height: 8px;
+  background: #de1b89;
+}
+
+.loading-text {
+  font-size: 18px;
+}
+
+.loading-bar-full {
+  width: 512px;
+  height: 8px;
+  background: #de1b89;
+  transition: 17s;
+}
+
+.display-none {
+  display: none;
 }
